navigation bar updated

--- a/hotstar.html
+++ b/hotstar.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disny+</title>
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images\icon.jpeg">
 </head>
 <body>
     <nav class="navbar">
-        <a class="logo"><img src="images\logo.png"></a>
+        <a class="logo"><img src="images\logo.png" class="brand-logo"></a>
         <ul class="navlist">
             <li class="navitem"><a href="#home">Home</a></li>
             <li class="navitem"><a href="#movies">Movies</a></li>
             <li class="navitem"><a href="#sports">Sports</a></li>
-            <li class="navlist"><a href="#disneyplus">Disney+</a></li>
+            <li class="navitem"><a href="#disneyplus">Disney+</a></li>
         </ul>
         <div class="rightbar">
             <input type="text" class="search-box" placeholder="Search">
-            <button class="sub-button">subscribe</button>
-            <a href="login.html">Login</a>
+            <button class="sub-button">SUBSCRIBE</button>
+            <a href="login.html" class="login">Login</a>
         </div>
     </nav>
         <div class="slider">
-            <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\lokiSlider.PNG" class="slide-img">
-            <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\slider 2.PNG" class="slider-img">
-            <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\slider 3.PNG" class="slider-img">
-            <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\slider 4.PNG" class="slider-img">
-            <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\slider 5.PNG" class="slider-img">
+            <img src="images\lokiSlider.PNG" class="slide-img">
+            <img src="images\slider 2.PNG" class="slider-img">
+            <img src="images\slider 3.PNG" class="slider-img">
+            <img src="images\slider 4.PNG" class="slider-img">
+            <img src="images\slider 5.PNG" class="slider-img">
         </div>
         <div class="video-container">
             <div class="video-card">
@@ -52,67 +53,67 @@
         </div>
         <div class="rec"><h1>RECCOMENDED FOR YOU</h1></div>
         <div class="movies-list">
-            <button class="prv"><img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\pre.png"></button>
-            <button class="next"><img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\nxt.png"></button>
+            <button class="prv"><img src="images\pre.png"></button>
+            <button class="next"><img src="images\nxt.png"></button>
             <div class="card-container">
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\loki.png" alt="loki" class="src">
+                    <img src="images\loki.png" alt="loki" class="src">
                     <div class="card-body">
                         <h1 class="name">LOKI</h1>
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\poster 2.png" alt="mulan" class="src">
+                    <img src="images\poster 2.png" alt="mulan" class="src">
                     <div class="card-body">
                         <h1 class="name">MULAN</h1>
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\poster 3.png" alt="POSTER" class="src">
+                    <img src="images\poster 3.png" alt="POSTER" class="src">
                     <div class="card-body">
                         <h1 class="name">THE FALCON AND WINTER SOLDIER</h1>
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\poster 5.png" alt="POSTER" class="src">
+                    <img src="images\poster 4.png" alt="POSTER" class="src">
                     <div class="card-body">
                         <h1 class="name">AVENGERS ENDGAME</h1>
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\poster 6.png" alt="POSTER" class="src">
+                    <img src="images\poster 5.png" alt="POSTER" class="src">
                     <div class="card-body">
                         <h1 class="name">thor</h1>
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\poster 7.png" alt="POSTER" class="src">
+                    <img src="images\poster 6.png" alt="POSTER" class="src">
                     <div class="card-body">
                         <h1 class="name">Avengers</h1>
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\poster 8.png" alt="POSTER" class="src">
+                    <img src="images\poster 7.png" alt="POSTER" class="src">
                     <div class="card-body">
                         <h1 class="name">PIRATES OF THE CARIBBIAN</h1>
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\poster 9.png" alt="POSTER" class="src">
+                    <img src="images\poster 8.png" alt="POSTER" class="src">
                     <div class="card-body">
                         <h1 class="name">SOUL</h1>
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\poster 10.png" alt="POSTER" class="src">
+                    <img src="images\poster 9.png" alt="POSTER" class="src">
                     <div class="card-body">
                         <h1 class="name">RAVA</h1>
                         <button class="watch-later">Add to Watch Later</button>
@@ -120,16 +121,23 @@
                 </div>
                 
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\poster 11.png" alt="POSTER" class="src">
+                    <img src="images\poster 10.png" alt="POSTER" class="src">
                     <div class="card-body">
                         <h1 class="name">LUCA</h1>
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="ref\Hotstar-Clone-Project\Project Hotstar Clone\poster 12.png" alt="POSTER" class="src">
+                    <img src="images\poster 11.png" alt="POSTER" class="src">
                     <div class="card-body">
                         <h1 class="name">FORD VS FARRARI</h1>
+                        <button class="watch-later">Add to Watch Later</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images\poster 12.png" alt="POSTER" class="src">
+                    <div class="card-body">
+                        <h1 class="name">DARK PHOENIX</h1>
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
