--- a/hotstar.html
+++ b/hotstar.html
@@ -22,12 +22,15 @@
             <a href="login.html" class="login">Login</a>
         </div>
     </nav>
-        <div class="slider">
+    <div class="caraousel-container">
+        <div class="caraousel">
             <img src="images\lokiSlider.PNG" class="slide-img">
-            <img src="images\slider 2.PNG" class="slider-img">
-            <img src="images\slider 3.PNG" class="slider-img">
-            <img src="images\slider 4.PNG" class="slider-img">
-            <img src="images\slider 5.PNG" class="slider-img">
+            <img src="images\slide">
+            <img src="images\slider 2.PNG" class="slider">
+            <img src="images\slider 3.PNG" class="slider">
+            <img src="images\slider 4.PNG" class="slider">
+            <img src="images\slider 5.PNG" class="slider">
+        </div>
         </div>
         <div class="video-container">
             <div class="video-card">
