--- a/hotstar.html
+++ b/hotstar.html
@@ -54,12 +54,12 @@
                 <video src="videos\star-war.mp4" mute loop class="card-video"></video>
             </div>
         </div>
-        <div class="rec"><h1>RECCOMENDED FOR YOU</h1></div>
+        <div class="rec"><h1>Recommended For You</h1></div>
         <div class="movies-list">
-            <button class="prv"><img src="images\pre.png"></button>
-            <button class="next"><img src="images\nxt.png"></button>
+            <button class="prv" href="#avengers"><img src="images\pre.png" class="img"></button>
+            <button class="next"><img src="images\nxt.png" class="img"></button>
             <div class="card-container">
-                <div class="card">
+                <div class="card" id="loki">
                     <img src="images\loki.png" alt="loki" class="src">
                     <div class="card-body">
                         <h1 class="name">LOKI</h1>
@@ -94,7 +94,7 @@
                         <button class="watch-later">Add to Watch Later</button>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" id="avengers">
                     <img src="images\poster 6.png" alt="POSTER" class="src">
                     <div class="card-body">
                         <h1 class="name">Avengers</h1>
